resolved problem with the name and id of pokemon with z-index

--- a/src/components/fichePokemon/styles/mainInformation.css
+++ b/src/components/fichePokemon/styles/mainInformation.css
@@ -26,12 +26,11 @@
 
 .nomId {
   text-align: center;
-  /* background-color: black;*/
   color: white;
   margin-top: 18px;
   margin-bottom: 40px;
-  /* width: 50%;*/
   position: relative;
+  z-index: 20;
 }
 
 /*sous catégorie de principal - Subcategory*/
